# transit-lang-cmp

./: .gitignore  LICENSE.md  README.md  REQUIREMENTS.md
TranNetMin/: Program.cs  TranNetMin.csproj  readme.md
TranNetMin/Properties/: launchSettings.json
Trannet/: Program.cs  README.md  Trannet.csproj  Trannet.sln
Trannet.Benchmark/: Program.cs  README.md  Trannet.Benchmark.csproj
Trannet.Benchmark/Benchmarks/: TrannetBenchmarks.cs
Trannet/Controllers/: SchedulesController.cs
Trannet/Helpers/: MemoryExtensions.cs
Trannet/Models/: Models.cs
Trannet/Properties/: launchSettings.json
Trannet/Services/: GTFS.cs  GTFSService.cs  Models.cs
TransitFs/: Program.fs  README.md  TransitFs.fsproj  appsettings.json
trala/: .gitignore  .scalafmt.conf  README.md  build.sbt  build.sc
transikt/: README.md  build.gradle.kts  settings.gradle.kts
trascal/: Makefile  README.md  app.pas  csvutils.pas
trascal/lgenerics/: dynbuffer.inc  dynbufferh.inc  enums.inc  enumsh.inc  globmincut.inc  globmincuth.inc  lgabstractcontainer.pas  lgarrayhelpers.pas  lgarrayhelpers.ppu  lgasync.pas  lgavltree.pas  lgbimap.pas  lgbstutils.pas  lgdeque.pas  lgenerics.lpk  lgenerics.pas  (+49 more)
trava/: README.md  build.gradle  settings.gradle
trexit/: .formatter.exs  .gitignore  README.md  mix.exs
trogsit/: README.md  app.go  app_test.go  go.mod
trustit/: Cargo.toml  README.md
trustit/src/: main.rs
trypsit/: README.md  app.ts  deps.ts  lock.json
tryst/: LICENSE  README.md  results2  results3  results_with_indirect_indexes_and_tuning  results_without_indirect_indexes  shard.yml
(+62 files in other folders)
